--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "postinstall": "npm run build",
-    "start": "node app.js"
+    "start": "node app.js",
+    "deploy": "sh deploy.sh"
   },
   "dependencies": {
     "axios": "^0.21.4",
